--- a/MovieLens_Preprocessing.ipynb
+++ b/MovieLens_Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ffcbd046",
+   "id": "963c6272",
    "metadata": {},
    "source": [
     "# EDA of the MovieLens dataset\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eaf409a9",
+   "id": "d25c4822",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "cd28483f",
+   "execution_count": 9,
+   "id": "c6471274",
    "metadata": {},
    "outputs": [
     {
@@ -53,44 +53,44 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>userId</th>\n",
        "      <th>movieId</th>\n",
        "      <th>rating</th>\n",
        "      <th>timestamp</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>userId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>4.0</td>\n",
        "      <td>964982703</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>4.0</td>\n",
        "      <td>964981247</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>6</td>\n",
        "      <td>4.0</td>\n",
        "      <td>964982224</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>47</td>\n",
        "      <td>5.0</td>\n",
        "      <td>964983815</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>50</td>\n",
        "      <td>5.0</td>\n",
        "      <td>964982931</td>\n",
@@ -100,28 +100,29 @@
        "</div>"
       ],
       "text/plain": [
-       "   userId  movieId  rating  timestamp\n",
-       "0       1        1     4.0  964982703\n",
-       "1       1        3     4.0  964981247\n",
-       "2       1        6     4.0  964982224\n",
-       "3       1       47     5.0  964983815\n",
-       "4       1       50     5.0  964982931"
+       "        movieId  rating  timestamp\n",
+       "userId                            \n",
+       "1             1     4.0  964982703\n",
+       "1             3     4.0  964981247\n",
+       "1             6     4.0  964982224\n",
+       "1            47     5.0  964983815\n",
+       "1            50     5.0  964982931"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ratings_df = pd.read_csv(\"./Data/MovieLens/ml-latest-small/ratings.csv\")\n",
+    "ratings_df = pd.read_csv(\"./Data/MovieLens/ml-latest-small/ratings.csv\", index_col=0)\n",
     "ratings_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "0ca8beaf",
+   "execution_count": 13,
+   "id": "187ceeb2",
    "metadata": {},
    "outputs": [
     {
@@ -145,75 +146,111 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>movieId</th>\n",
        "      <th>title</th>\n",
        "      <th>genres</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>movieId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>Toy Story (1995)</td>\n",
        "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>Jumanji (1995)</td>\n",
        "      <td>Adventure|Children|Fantasy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>Grumpier Old Men (1995)</td>\n",
        "      <td>Comedy|Romance</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>Waiting to Exhale (1995)</td>\n",
        "      <td>Comedy|Drama|Romance</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
+       "      <th>5</th>\n",
        "      <td>Father of the Bride Part II (1995)</td>\n",
        "      <td>Comedy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Heat (1995)</td>\n",
+       "      <td>Action|Crime|Thriller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Sabrina (1995)</td>\n",
+       "      <td>Comedy|Romance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Tom and Huck (1995)</td>\n",
+       "      <td>Adventure|Children</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Sudden Death (1995)</td>\n",
+       "      <td>Action</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>GoldenEye (1995)</td>\n",
+       "      <td>Action|Adventure|Thriller</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   movieId                               title  \\\n",
-       "0        1                    Toy Story (1995)   \n",
-       "1        2                      Jumanji (1995)   \n",
-       "2        3             Grumpier Old Men (1995)   \n",
-       "3        4            Waiting to Exhale (1995)   \n",
-       "4        5  Father of the Bride Part II (1995)   \n",
+       "                                      title  \\\n",
+       "movieId                                       \n",
+       "1                          Toy Story (1995)   \n",
+       "2                            Jumanji (1995)   \n",
+       "3                   Grumpier Old Men (1995)   \n",
+       "4                  Waiting to Exhale (1995)   \n",
+       "5        Father of the Bride Part II (1995)   \n",
+       "6                               Heat (1995)   \n",
+       "7                            Sabrina (1995)   \n",
+       "8                       Tom and Huck (1995)   \n",
+       "9                       Sudden Death (1995)   \n",
+       "10                         GoldenEye (1995)   \n",
        "\n",
-       "                                        genres  \n",
-       "0  Adventure|Animation|Children|Comedy|Fantasy  \n",
-       "1                   Adventure|Children|Fantasy  \n",
-       "2                               Comedy|Romance  \n",
-       "3                         Comedy|Drama|Romance  \n",
-       "4                                       Comedy  "
+       "                                              genres  \n",
+       "movieId                                               \n",
+       "1        Adventure|Animation|Children|Comedy|Fantasy  \n",
+       "2                         Adventure|Children|Fantasy  \n",
+       "3                                     Comedy|Romance  \n",
+       "4                               Comedy|Drama|Romance  \n",
+       "5                                             Comedy  \n",
+       "6                              Action|Crime|Thriller  \n",
+       "7                                     Comedy|Romance  \n",
+       "8                                 Adventure|Children  \n",
+       "9                                             Action  \n",
+       "10                         Action|Adventure|Thriller  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "movies_df = pd.read_csv(\"./Data/MovieLens/ml-latest-small/movies.csv\")\n",
-    "movies_df.head()"
+    "movies_df = pd.read_csv(\"./Data/MovieLens/ml-latest-small/movies.csv\", index_col=0)\n",
+    "movies_df.head(10)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1a417209",
+   "id": "05e73231",
    "metadata": {},
    "source": [
     "# Recreating the datacamp's dataset\n"
@@ -221,8 +258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "afffd87e",
+   "execution_count": 19,
+   "id": "a64f2232",
    "metadata": {},
    "outputs": [
     {
@@ -258,50 +295,50 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>Jumanji (1995)</td>\n",
+       "      <td>Toy Story (1995)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>Jumanji (1995)</td>\n",
+       "      <td>Grumpier Old Men (1995)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
        "      <td>6</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>Jumanji (1995)</td>\n",
+       "      <td>Heat (1995)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>47</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>Jumanji (1995)</td>\n",
+       "      <td>Seven (a.k.a. Se7en) (1995)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
        "      <td>50</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>Jumanji (1995)</td>\n",
+       "      <td>Usual Suspects, The (1995)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   userId  movieId  rating           title\n",
-       "0       1        1     4.0  Jumanji (1995)\n",
-       "1       1        3     4.0  Jumanji (1995)\n",
-       "2       1        6     4.0  Jumanji (1995)\n",
-       "3       1       47     5.0  Jumanji (1995)\n",
-       "4       1       50     5.0  Jumanji (1995)"
+       "   userId  movieId  rating                        title\n",
+       "0       1        1     4.0             Toy Story (1995)\n",
+       "1       1        3     4.0      Grumpier Old Men (1995)\n",
+       "2       1        6     4.0                  Heat (1995)\n",
+       "3       1       47     5.0  Seven (a.k.a. Se7en) (1995)\n",
+       "4       1       50     5.0   Usual Suspects, The (1995)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,14 +346,15 @@
    "source": [
     "user_ratings_df = ratings_df.copy()\n",
     "user_ratings_df.drop('timestamp',axis=1,inplace=True)\n",
-    "user_ratings_df['title'] = movies_df.loc[user_rating_df[\"userId\"]][\"title\"].values\n",
+    "user_ratings_df['title'] = movies_df.loc[user_ratings_df[\"movieId\"]][\"title\"].values\n",
+    "user_ratings_df.reset_index(inplace=True)\n",
     "user_ratings_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "3c850eec",
+   "execution_count": 20,
+   "id": "ecf6b86b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,43 +363,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f85baa68",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d81c256",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "fdfe6c75",
+   "execution_count": 21,
+   "id": "c049b562",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1996"
+       "2018"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# Extract year\n",
+    "year = []\n",
+    "for t in user_ratings_df['title']:\n",
+    "    try:\n",
+    "        year.append(int(t[-5:-1]))\n",
+    "    except ValueError:\n",
+    "        pass\n",
+    "        \n",
+    "year = np.array(year)\n",
+    "np.max(year)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b2ada47",
+   "id": "a0b54e1e",
    "metadata": {},
    "outputs": [],
    "source": []
