--- a/MovieLens_Preprocessing.ipynb
+++ b/MovieLens_Preprocessing.ipynb
@@ -2,255 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "963c6272",
-   "metadata": {},
-   "source": [
-    "# EDA of the MovieLens dataset\n",
-    "\n",
-    "The dataset set contains 100,000 reviews by ~1000 users on ~1700 movies. Each user rated at least 20 movies. This is a subset dataset, as the full dataset contains 25M reviews. Got it from kaggle, [here](https://www.kaggle.com/prajitdatta/movielens-100k-dataset)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "d25c4822",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Imports\n",
-    "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import plotly.express as px\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "c6471274",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>movieId</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>timestamp</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>userId</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>964982703</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>964981247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>6</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>964982224</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>47</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>964983815</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>50</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>964982931</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        movieId  rating  timestamp\n",
-       "userId                            \n",
-       "1             1     4.0  964982703\n",
-       "1             3     4.0  964981247\n",
-       "1             6     4.0  964982224\n",
-       "1            47     5.0  964983815\n",
-       "1            50     5.0  964982931"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ratings_df = pd.read_csv(\"./Data/MovieLens/ml-latest-small/ratings.csv\", index_col=0)\n",
-    "ratings_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "187ceeb2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>genres</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>movieId</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Toy Story (1995)</td>\n",
-       "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Jumanji (1995)</td>\n",
-       "      <td>Adventure|Children|Fantasy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Grumpier Old Men (1995)</td>\n",
-       "      <td>Comedy|Romance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Waiting to Exhale (1995)</td>\n",
-       "      <td>Comedy|Drama|Romance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Father of the Bride Part II (1995)</td>\n",
-       "      <td>Comedy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Heat (1995)</td>\n",
-       "      <td>Action|Crime|Thriller</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Sabrina (1995)</td>\n",
-       "      <td>Comedy|Romance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Tom and Huck (1995)</td>\n",
-       "      <td>Adventure|Children</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Sudden Death (1995)</td>\n",
-       "      <td>Action</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>GoldenEye (1995)</td>\n",
-       "      <td>Action|Adventure|Thriller</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                      title  \\\n",
-       "movieId                                       \n",
-       "1                          Toy Story (1995)   \n",
-       "2                            Jumanji (1995)   \n",
-       "3                   Grumpier Old Men (1995)   \n",
-       "4                  Waiting to Exhale (1995)   \n",
-       "5        Father of the Bride Part II (1995)   \n",
-       "6                               Heat (1995)   \n",
-       "7                            Sabrina (1995)   \n",
-       "8                       Tom and Huck (1995)   \n",
-       "9                       Sudden Death (1995)   \n",
-       "10                         GoldenEye (1995)   \n",
-       "\n",
-       "                                              genres  \n",
-       "movieId                                               \n",
-       "1        Adventure|Animation|Children|Comedy|Fantasy  \n",
-       "2                         Adventure|Children|Fantasy  \n",
-       "3                                     Comedy|Romance  \n",
-       "4                               Comedy|Drama|Romance  \n",
-       "5                                             Comedy  \n",
-       "6                              Action|Crime|Thriller  \n",
-       "7                                     Comedy|Romance  \n",
-       "8                                 Adventure|Children  \n",
-       "9                                             Action  \n",
-       "10                         Action|Adventure|Thriller  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "movies_df = pd.read_csv(\"./Data/MovieLens/ml-latest-small/movies.csv\", index_col=0)\n",
-    "movies_df.head(10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "05e73231",
+   "id": "fa8e7a41",
    "metadata": {},
    "source": [
     "# Recreating the datacamp's dataset\n"
@@ -259,7 +11,102 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a64f2232",
+   "id": "024fb065",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Toy Story (1995)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Grumpier Old Men (1995)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Heat (1995)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>47</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Seven (a.k.a. Se7en) (1995)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>50</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Usual Suspects, The (1995)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   userId  movieId  rating                        title\n",
+       "0       1        1     4.0             Toy Story (1995)\n",
+       "1       1        3     4.0      Grumpier Old Men (1995)\n",
+       "2       1        6     4.0                  Heat (1995)\n",
+       "3       1       47     5.0  Seven (a.k.a. Se7en) (1995)\n",
+       "4       1       50     5.0   Usual Suspects, The (1995)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_ratings_df = ratings_df.copy()\n",
+    "user_ratings_df.drop('timestamp',axis=1,inplace=True)\n",
+    "user_ratings_df['title'] = movies_df.loc[user_ratings_df[\"movieId\"]][\"title\"].values\n",
+    "user_ratings_df.reset_index(inplace=True)\n",
+    "user_ratings_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3f4a066b",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ecf6b86b",
+   "id": "074b77fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +211,37 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c049b562",
+   "id": "57d9a953",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2018"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extract year\n",
+    "year = []\n",
+    "for t in user_ratings_df['title']:\n",
+    "    try:\n",
+    "        year.append(int(t[-5:-1]))\n",
+    "    except ValueError:\n",
+    "        pass\n",
+    "        \n",
+    "year = np.array(year)\n",
+    "np.max(year)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5341d4bc",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +271,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0b54e1e",
+   "id": "383f1e87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15796398",
    "metadata": {},
    "outputs": [],
    "source": []
